Changelog
=========

9.9.dev0 - (unreleased)
-----------------------

9.8 - (2017-05-22)
------------------
* Change: Add dedicated async quota for relations jobs
  [avoinea refs #84915]
* Change: fixed PyLint warnings and errors
  [valipod refs #84949]

9.7 - (2017-05-15)
------------------
* Change: fixed PyLint warnings and errors
  [eduard-fironda refs #84949]

9.6 - (2017-04-24)
------------------
* Change: updated package information
  [eduard-fironda]

9.5 - (2017-02-14)
------------------
* Bug fix: Fix  `filter_relation_translations`
  [voineali refs #81658]

9.4 - (2016-10-31)
------------------
* Change: check if getFolderContents is present when checking the relation
  tool types otherwise we get an error within an async operation
  [ichim-david refs #75296]

9.3 - (2016-10-03)
------------------
* Change: Added dependency to plone.stringinterp 1.0.14+
  [avoinea]

9.2 - (2016-09-05)
------------------
* Bug fix: take into consideration that during tests relatedItems
  might not have access to plone.app.async queue
  [ichim-david refs #75480]

9.1 - (2016-09-05)
------------------
* Bug fix: Fix Related items URLs within Content-Rules
  [voineali refs #70758]

9.0 - (2016-08-29)
------------------
* Feature: Added possibility to automatically publish/retract object's related items
  and/or backward references via Content-Rules
  [catalin refs #70758]

8.3 - (2016-05-19)
------------------
* Bug fix: Fix pylint warnings
  [ichim-david refs #71940]

8.2 - (2016-01-04)
------------------
* Bugfix: removed debugging statements from eea_relateditems.pt
  [ichim-david]

8.1 - (2015-12-07)
------------------
* Change: Added system depenedencies within setup.py
  [voineali refs #27406]

8.0 - (2015-11-09)
------------------
* Fix: Updated objects where new version was created and the eea_refs contains
  objects instead of uids
  [szabozo0 refs #30502]

7.9 - (2015-11-06)
------------------
* Fix: Force uids only for eea_refs
  [szabozo0 refs #30398]
